maze.lessons.maze.island.IslandMaze.scala.error
Escaper:36: error: value d is not a member of object plm.universe.Direction
  Direction d=getDirection();
            ^Escaper:42: error: not found: value d
    setDirection(d)
                 ^